<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_plus_foreground"
            android:title="@string/menu_add_farmer" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_audit_foreground"
            android:title="@string/menu_audits" />
    </group>
</menu>